# rust_f1_telemetry

./: Cargo.toml
src/: main.rs
src/common/telemetry_data/: car_damage_data.rs  car_setup_data.rs  car_status_data.rs  car_telemetry_data.rs  event_data.rs  lap_data.rs  mod.rs  motion_data.rs  packet_header.rs  participant_data.rs  session_data.rs
src/event_loop/: event_loop.rs
