[package]
name = "f1telemetry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.15.0", features=["full"]}
async-std = "1.10.0"
serde = {version = "1.0.133", features = ["derive"]}
serde-bytes-repr = "0.1.5"
bincode = "1.3.3"